--- a/style.css
+++ b/style.css
@@ -3,8 +3,51 @@
     margin: 0;
     padding: 0;
 }
---rooot{
+--root{
     font-family: 'Inter', sans-serif;
     font-family: 'Lobster', cursive;
     font-family: 'Montserrat', sans-serif;
+}
+.first-banner{
+    background-image: url(./images/donation9.jpg);
+    height: 80vh;
+    width: 100%;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+}
+.banner-content{
+    background: linear-gradient(360deg, #121212 0%, rgba(18, 18, 18, 0) 100%);
+    height: 100%;
+    display: flex;
+    align-items: center;
+    text-align: center;
+}
+.first-banner h1{
+    color: #ffff;
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 65px;
+    line-height: 79px;
+    text-align: center;
+}
+.first-banner p{
+    font-style: normal;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 28px;
+    text-align: center;
+    color: #FFFFFF;
+}
+
+.btn{
+    text-decoration: none;
+    color: #FFFFFF;
+    padding: 16px 12px;
+    background: #FF5959;
+    border-radius: 5px;
+}
+.btn-class{
+    margin-top: 32px;
 }
