--- a/style.css
+++ b/style.css
@@ -16,12 +16,16 @@
     background-position: center;
     background-repeat: no-repeat;
 }
-.banner-content{
+.banner-mask{
     background: linear-gradient(360deg, #121212 0%, rgba(18, 18, 18, 0) 100%);
     height: 100%;
+    width: 100%;
     display: flex;
     align-items: center;
     text-align: center;
+}
+.banner-content{
+    width: 100%;
 }
 .first-banner h1{
     color: #ffff;
@@ -50,4 +54,56 @@
 }
 .btn-class{
     margin-top: 32px;
+}
+.donate-today{
+    margin-top: 64px;
+}
+.donate-today h2{
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 45px;
+    line-height: 54px;
+    text-align: center;
+    margin: 24px 0;
+}
+.donate-today p{
+    text-align: center;
+}
+.donate-card{
+    margin: 64px 0;
+    display: flex;
+    justify-content: center;
+    gap: 16px;
+}
+.donate-card div{
+    padding: 48px;
+    background: #FAFAFA;
+    border-radius: 5px;
+}
+.donate-card h3{
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 30px;
+    line-height: 36px;
+    text-align: center;
+    color: #707070;
+}
+#selected-card{
+    background: #FFEEEE;
+    color: #FF5959;
+    border: 2px solid #FF5959;
+}
+.donate-input{
+    text-align: center;
+}
+.donate-input input{
+    width: 50%;
+    text-align: center;
+    outline: none;
+    border: none;
+    color: #B3B3B3;
+    padding: 8px 0;
+    border-bottom: 1px solid #B3B3B3;
 }
