--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@
 }
 .first-banner{
     background-image: url(./images/donation9.jpg);
-    height: 80vh;
+    height: 100vh;
     width: 100%;
     background-size: cover;
     background-position: center;
@@ -56,7 +56,8 @@
     margin-top: 32px;
 }
 .donate-today{
-    margin-top: 64px;
+    margin: 100px 0;
+    padding: 80px 0;
 }
 .donate-today h2{
     font-family: 'Inter';
@@ -106,4 +107,46 @@
     color: #B3B3B3;
     padding: 8px 0;
     border-bottom: 1px solid #B3B3B3;
+}
+.donate-plan{
+    margin: 100px 0;
+}
+.donate-plan h2{
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 45px;
+    line-height: 54px;
+    text-align: center;
+    margin: 24px 0;
+}
+.donate-plan p{
+    text-align: center;
+}
+.plan-card{
+    display: flex;
+    justify-content: center;
+    gap: 16px;
+    margin-top: 64px;
+}
+.plan-card p{
+    text-align: left;
+}
+.plan-card img{
+    height: 53px;
+    width: 53px;
+}
+
+.plan-card div{
+    padding: 48px 16px;
+    border-radius: 5px;
+}
+#card1{
+    background: rgba(79, 157, 166, 0.1);
+}
+#card2{
+    background: rgba(255, 89, 89, 0.1);
+}
+#card3{
+    background: rgba(255, 244, 214, 1);
 }
