depends on donation done

--- a/style.css
+++ b/style.css
@@ -128,6 +128,7 @@
     justify-content: center;
     gap: 16px;
     margin-top: 64px;
+    color: #707070;
 }
 .plan-card p{
     text-align: left;
@@ -149,4 +150,31 @@
 }
 #card3{
     background: rgba(255, 244, 214, 1);
+}
+
+.depends-donation{
+    display: flex;
+    justify-content: center;
+}
+.half-box{
+    width: 50%;
+}
+.depends-img img{
+    width: 450px;
+    height: 450px;
+    margin-left: 10%;
+}
+.depends-content{
+    width: 450px;
+    height: 450px;
+    margin-left: 20%;
+    margin-top: 5%;
+}
+
+.depends-content h2{
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 45px;
+    line-height: 54px;
 }
