--- a/style.css
+++ b/style.css
@@ -139,7 +139,7 @@
     display: flex;
     justify-content: center;
     gap: 16px;
-    margin-top: 64px;
+    margin: 5% 15%;
     color: #707070;
 }
 .plan-card p{
